# motion-trajectory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
app/: CMakeLists.txt  main.cc
include/: CMakeLists.txt  Trajectory.hpp  VideoProcessor.hpp
src/: CMakeLists.txt  Trajectory.cc  VideoProcessor.cc  main.cc
